fix: fern-anchor spacing in steps component

--- a/packages/ui/app/src/mdx/components/Steps.scss
+++ b/packages/ui/app/src/mdx/components/Steps.scss
@@ -20,5 +20,9 @@
 
             content: counter(step);
         }
+
+        .fern-anchor > a {
+            @apply -ml-10;
+        }
     }
 }
